fix: correct table contrast in dark mode
The previous releases table had inaccessible contrast in dark mode.

Fixes: https://github.com/nodejs/nodejs.org/issues/4210

--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -76,6 +76,9 @@
       tr:nth-child(even) {
         background-color: $dark-black2 !important;
       }
+      tr:nth-child(odd) {
+        background-color: $black;
+      }
     }
 
     .highlight-box {
